# power_rptests

./: .gitignore  README.md  overview_status.pages  pyproject.toml
figures/: caption.txt
notebooks/: data_generation.ipynb  exercises.ipynb  noise_comparison.ipynb
simulated_data/: budget_constraints_alg2.pkl  sim_1.csv  sim_1.xlsx
src/power_rptests/: budget_placement.py  data_generation.py  data_plotting.py  simulations.py
src/power_rptests/rp_tests/: test_rev_pref.py
