[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "power-rptests"
version = "0.1.0"
description = "Power analysis for revealed preference tests"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}
